# AnkiCardTemplates

./: .gitignore  AGENTS.md  README.md  build.js  jest.config.js  package-lock.json  package.json  plan.md  pyproject.toml  scratch.md
.github/workflows/: ai-code-review.yml  test.yml
design/: design-doc.md  design-spec.md  number-theory-gcf-lcm.md  project-plan.md
docs/: anki-integration-guide.md
docs/anki-html/: dynamic-math-back.html  dynamic-math-back.inline.html  dynamic-math-front.html  dynamic-math-front.inline.html
dynamic-division/: back.js  front.js
dynamic-multiplication/: back.js  front.js
exponent-to-factors/: back.js  front.js
issues/: enhancement-codiumai-pr-agent.md
order-of-operations/: back.js  front.js
pr-summaries/: pr-02-phase-2-template-contract-and-per-review.md
rounding/: back.js  front.js
scripts/: build-bundle.js  generate-inline-html.js  render-samples.js
src/entry/: bundle.js
src/order-of-operations/: back.js  front.js  index.js
src/runtime/: index.js  reviewSeed.js  rng.js  types.d.ts
src/templates/_starter/: add_two_numbers.js
templates/order-of-operations/: back.html  front.html  script.js
tests/: setup.js
tests/dynamic-division/: test.js
tests/dynamic-multiplication/: test.js
tests/exponent-to-factors/: test.js
tests/order-of-operations/: script.test.js  test.js
tests/rounding/: test.js
tests/runtime/: reviewSeed.test.js  rng.test.js
tests/templates/: contract.test.js  gcf_basic.test.js  lcm_basic.test.js  multiply_2d_by_1d.test.js  starter.test.js
utils/: gen_expression.py
(+3 files in other folders)
